--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,20 @@
         <artifactId>postgresql</artifactId>
         <version>42.7.3</version>
     </dependency>
+
+      <!-- Pour les tests -->
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>4.5.1</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
 <build>
